--- a/app/javascript/mastodon/components/form_fields/form_field_wrapper.module.scss
+++ b/app/javascript/mastodon/components/form_fields/form_field_wrapper.module.scss
@@ -1,13 +1,16 @@
 .wrapper {
+  --form-field-label-gap: 6px;
+
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: var(--form-field-label-gap);
   color: var(--color-text-primary);
   font-size: 15px;
 
   &[data-input-placement^='inline'] {
     flex-direction: row;
-    gap: 8px;
+
+    --form-field-label-gap: 8px;
   }
 
   &[data-input-placement='inline-start'] {
